--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,57 +1,3 @@
-########################
-# Application properties
-########################
-application:
-  # Base directories for binaries and shell scripts
-  directories:
-    base-dir: .
-    config-dir: config
-    data-dir: .datafiles
-    certs-dir: .certs
-    bin-dir: .binaries
-  # Host settings for toxiproxy
-  toxiproxy:
-    host: localhost
-    port: 8474
-  # Various resource pool settings
-  pool:
-    threadPoolMaxSize: -1
-    maxConnPerRoute: 0
-    maxTotal: 0
-########################
-# Spring boot properties
-# https://docs.spring.io/spring-boot/appendix/application-properties/index.html
-########################
-management:
-  endpoints:
-    access:
-      default: unrestricted
-    web:
-      exposure:
-        include: health,info,shutdown,env,threaddump,metrics
-      base-path: /api/actuator
-  endpoint:
-    health:
-      show-details: always
-  health:
-    defaults:
-      enabled: true
-    db:
-      enabled: false
-  metrics:
-    tags:
-      application: ${spring.application.name}
-logging:
-  pattern:
-    console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) [%t] %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
-    file: "%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}} ${LOG_LEVEL_PATTERN:%5p} [%t] %logger{49} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
-  file:
-    name: .log/pestcontrol.log
-  logback:
-    rolling-policy:
-      max-history: 3
-server:
-  port: 9090
 spring:
   config:
     import: optional:file:./config/
@@ -61,19 +7,8 @@ spring:
   profiles:
     active: default
   shell:
-    command:
-      stacktrace:
-        enabled: true
-      version:
-        enabled: true
-        showBuildName: true
-        showGitBranch: true
-    script:
-      enabled: true
-    interactive:
-      enabled: true
-    noninteractive:
-      enabled: true
+    context:
+      close: true
     history:
       name: .log/pestcontrol.history
 
@@ -135,3 +70,58 @@ spring:
       include-stacktrace: always
       include-binding-errors: always
 
+########################
+# Spring boot properties
+# https://docs.spring.io/spring-boot/appendix/application-properties/index.html
+########################
+management:
+  endpoints:
+    access:
+      default: unrestricted
+    web:
+      exposure:
+        include: health,info,shutdown,env,threaddump,metrics
+      base-path: /api/actuator
+  endpoint:
+    health:
+      show-details: always
+  health:
+    defaults:
+      enabled: true
+    db:
+      enabled: false
+  metrics:
+    tags:
+      application: ${spring.application.name}
+logging:
+  pattern:
+    console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) [%t] %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
+    file: "%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}} ${LOG_LEVEL_PATTERN:%5p} [%t] %logger{49} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
+  file:
+    name: .log/pestcontrol.log
+  logback:
+    rolling-policy:
+      max-history: 3
+server:
+  port: 9090
+
+########################
+# Application properties
+########################
+application:
+  # Base directories for binaries and shell scripts
+  directories:
+    base-dir: .
+    config-dir: config
+    data-dir: .datafiles
+    certs-dir: .certs
+    bin-dir: .binaries
+  # Host settings for toxiproxy
+  toxiproxy:
+    host: localhost
+    port: 8474
+  # Various resource pool settings
+  pool:
+    threadPoolMaxSize: -1
+    maxConnPerRoute: 0
+    maxTotal: 0
