--- a/pom.xml
+++ b/pom.xml
@@ -272,7 +272,7 @@
         <profile>
             <id>assembly</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <build>
                 <plugins>
